crates/ktsense-cli/tests/snapshots/map__a_budget_that_omits_files_names_the_directories_they_live_in.snap
---
source: crates/ktsense-cli/tests/map.rs
expression: record(&run)
---
exit 0
stderr empty
---
# Repository map

Budget 160 tokens, content bound 142. 3 files shown, 6 omitted.

## core/src/main/kotlin/shop/order/Order.kt

```kotlin
data class Order(val id: OrderId, val customerEmail: String, val totalCents: Long)
data class OrderId(val value: Long)
```

## core/src/main/kotlin/shop/order/OrderRepository.kt

```kotlin
interface OrderRepository
```

## app/src/main/kotlin/shop/app/checkout/CheckoutConfig.kt

```kotlin
object CheckoutConfig
```

Ranking is syntactic: files are ordered by import centrality, then by how often their declarations are referenced by name across the corpus, with import counts breaking ties. A reference is an identifier occurrence outside an import, counted by name and not type-checked, so declarations sharing a simple name across packages share a count.

5 files declare nothing public and are not mapped.

Omitted: app/src/main/kotlin/shop/app/checkout (2), app/src/main/kotlin/shop/app/reporting (2), db/src/main/kotlin/shop/db (2)
