crates/ktsense-cli/tests/snapshots/map__dot_is_refused_because_only_deps_produces_a_graph.snap
---
source: crates/ktsense-cli/tests/map.rs
expression: record(&run)
---
exit 1
stderr ktsense: map does not support --format dot (only deps does)
---
